[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily"
version = "0.2.0"
description = "A command-line dashboard for daily topics, news signals, and GitHub trending projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
license = { text = "MIT" }
keywords = ["cli", "news", "google", "baidu", "trends"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
body = [
  "playwright>=1.46",
]
model = [
  "torch>=2.2",
  "transformers>=4.41",
]
all = [
  "playwright>=1.46",
  "torch>=2.2",
  "transformers>=4.41",
]

[project.scripts]
daily = "daily_cli.cli:main"

[tool.setuptools.packages.find]
include = ["daily_cli*"]
